--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://192.168.15.18:3306/mudi
+spring.datasource.url=jdbc:mysql://localhost:3306/mudi
 spring.datasource.username=root
 spring.datasource.password=123456
